logs/dag_id=dag_youtube_api/run_id=manual__2022-11-27T16:18:28.089737+00:00/task_id=creatableLoad/attempt=1.log
[2022-11-27T16:18:30.115+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-27T16:18:28.089737+00:00 [queued]>
[2022-11-27T16:18:30.147+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-27T16:18:28.089737+00:00 [queued]>
[2022-11-27T16:18:30.147+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-27T16:18:30.148+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 2
[2022-11-27T16:18:30.148+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-27T16:18:30.195+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): creatableLoad> on 2022-11-27 16:18:28.089737+00:00
[2022-11-27T16:18:30.224+0000] {standard_task_runner.py:55} INFO - Started process 9254 to run task
[2022-11-27T16:18:30.236+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_youtube_api', 'creatableLoad', 'manual__2022-11-27T16:18:28.089737+00:00', '--job-id', '369', '--raw', '--subdir', 'DAGS_FOLDER/dag_youtube_api.py', '--cfg-path', '/tmp/tmpzssvvrk_']
[2022-11-27T16:18:30.250+0000] {standard_task_runner.py:83} INFO - Job 369: Subtask creatableLoad
[2022-11-27T16:18:30.502+0000] {task_command.py:376} INFO - Running <TaskInstance: dag_youtube_api.creatableLoad manual__2022-11-27T16:18:28.089737+00:00 [running]> on host 1977dd9b5152
[2022-11-27T16:18:30.792+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_youtube_api
AIRFLOW_CTX_TASK_ID=creatableLoad
AIRFLOW_CTX_EXECUTION_DATE=2022-11-27T16:18:28.089737+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-27T16:18:28.089737+00:00
[2022-11-27T16:18:30.828+0000] {logging_mixin.py:137} INFO - /opt/***/data/22.27.11_ID_videos.csv
[2022-11-27T16:18:30.834+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_youtube_api.py", line 147, in creatableLoad
    """
psycopg2.errors.SyntaxError: syntax error at or near "/"
LINE 2:             CREATE TABLE IF NOT EXISTS youtube_/opt/***/...
                                                       ^

[2022-11-27T16:18:30.853+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_youtube_api, task_id=creatableLoad, execution_date=20221127T161828, start_date=20221127T161830, end_date=20221127T161830
[2022-11-27T16:18:30.914+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 369 for task creatableLoad (syntax error at or near "/"
LINE 2:             CREATE TABLE IF NOT EXISTS youtube_/opt/***/...
                                                       ^
; 9254)
[2022-11-27T16:18:31.040+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-11-27T16:18:31.202+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
